--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <title>Tribute page</title>
       <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width">
       <link rel="stylesheet" href="css/style.css" type="text/css">
       <link rel="icon" href="assets/muslim.png" type="image/icon type">
    </head>
